# liboqs-cpp

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.txt  CMakeLists.txt  Dockerfile  Doxyfile  README.md  RELEASE.md  appveyor.yml  example.cpp  liboqs_cpp.h
.appveyor/: appveyor_build.bat  appveyor_test.bat
.circleci/: config.yml
.github/workflows/: cmake.yml
.travis/: install_liboqs.sh
VisualStudio/: VisualStudio.sln  liboqs-cpp.sln
VisualStudio/GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters
VisualStudio/kem/: kem.vcxproj  kem.vcxproj.filters
VisualStudio/rand/: rand.vcxproj  rand.vcxproj.filters
VisualStudio/sig/: sig.vcxproj  sig.vcxproj.filters
VisualStudio/unit_tests/: unit_tests.vcxproj  unit_tests.vcxproj.filters
cmake/: examples.cmake  liboqs-cppConfig.cmake.in  liboqs-cpp_dependencies.cmake  liboqs-cpp_uninstall.cmake.in
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classoqs_1_1_k_e_ms-members.html  classoqs_1_1_k_e_ms.html  classoqs_1_1_k_e_ms.js  classoqs_1_1_k_e_ms__coll__graph.map  classoqs_1_1_k_e_ms__coll__graph.md5  classoqs_1_1_k_e_ms__inherit__graph.md5  classoqs_1_1_key_encapsulation-members.html  classoqs_1_1_key_encapsulation.html  classoqs_1_1_key_encapsulation.js  classoqs_1_1_key_encapsulation__coll__graph.map  classoqs_1_1_key_encapsulation__coll__graph.md5  classoqs_1_1_mechanism_not_enabled_error-members.html  classoqs_1_1_mechanism_not_enabled_error.html  classoqs_1_1_mechanism_not_enabled_error.js  classoqs_1_1_mechanism_not_enabled_error__coll__graph.map  classoqs_1_1_mechanism_not_enabled_error__coll__graph.md5  classoqs_1_1_mechanism_not_enabled_error__inherit__graph.md5  classoqs_1_1_mechanism_not_supported_error-members.html  classoqs_1_1_mechanism_not_supported_error.html  classoqs_1_1_mechanism_not_supported_error.js  classoqs_1_1_mechanism_not_supported_error__coll__graph.map  classoqs_1_1_mechanism_not_supported_error__coll__graph.md5  classoqs_1_1_mechanism_not_supported_error__inherit__graph.md5  classoqs_1_1_signature-members.html  classoqs_1_1_signature.html  classoqs_1_1_signature.js  classoqs_1_1_signature__coll__graph.map  classoqs_1_1_signature__coll__graph.md5  classoqs_1_1_sigs-members.html  classoqs_1_1_sigs.html  classoqs_1_1_sigs.js  classoqs_1_1_sigs__coll__graph.map  classoqs_1_1_sigs__coll__graph.md5  classoqs_1_1_sigs__inherit__graph.map  classoqs_1_1_sigs__inherit__graph.md5  classoqs_1_1_timer-members.html  (+93 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  (+17 more)
examples/: act_demo.cpp  example.cpp  kem.cpp  kems.cpp  rand.cpp  sig.cpp  sigs.cpp
examples/standalone/: CMakeLists.txt
examples/standalone/src/: main.cpp
include/: common.h  common.hpp  oqs_cpp.h  oqs_cpp.hpp
include/rand/: rand.h  rand.hpp
unit_tests/: CMakeLists.txt
unit_tests/tests/: CMakeLists.txt  kems.cpp  sigs.cpp  test_kem.cpp  test_sig.cpp
